updates with assignments for show + tell

--- a/wk_3/thurs/basic rotation_noMatrix/index.html
+++ b/wk_3/thurs/basic rotation_noMatrix/index.html
@@ -6,6 +6,13 @@
   </head>
   
   <body>
+
+  	<p> Hello! </p>
+
+  	<br>
+  		<br>
+  			<br>
+  				<br>
     <script src="sketch.js"></script>
   
 
